# slamcpp

./: .gitignore  README.md  slamcpp.code-workspace
p001_hello/: CMakeLists.txt  README.md
p001_hello/src/: hello.cpp
p002_libHello/: CMakeLists.txt  README.md
p002_libHello/include/: main.hpp
p002_libHello/mylibs/: CMakeLists.txt
p002_libHello/mylibs/hello/: CMakeLists.txt
p002_libHello/mylibs/hello/include/: hello.hpp
p002_libHello/mylibs/hello/src/: hello.cpp
p002_libHello/src/: main.cpp
p003_useEigen/: CMakeLists.txt  README.md  setup.sh
p003_useEigen/include/: commons.hpp
p003_useEigen/src/: main.cpp
p004_sophus/: CMakeLists.txt  README.md  setup.sh
p004_sophus/src/: main.cpp
p005_sophus2/: CMakeLists.txt  README.md  setup.sh
p006_eigen_transforms/: CMakeLists.txt  README.md  setup.sh
p006_eigen_transforms/include/: commons.hpp
p006_eigen_transforms/src/: main.cpp
p007_pangolin/: CMakeLists.txt  README.md
p007_pangolin/data/: trajectory.txt
p007_pangolin/include/: commons.hpp  plot_trajectory_utils.hpp
p007_pangolin/src/: main.cpp  main_plot_trajectory.cpp  main_vizualize_geometry.cpp  plot_trajectory_utils.cpp
p008_sophus_pangolin/: CMakeLists.txt  README.md
p008_sophus_pangolin/data/: trajectory_noisy.txt  trajectory_true.txt
p008_sophus_pangolin/include/: commons.hpp
p008_sophus_pangolin/src/: main.cpp
p009_opencv/: CMakeLists.txt  README.md  setup.sh
p009_opencv/include/: basics.hpp  commons.hpp  utils_plot_trajectory.hpp
p009_opencv/src/: main.cpp  main_opencv.cpp  utils_plot_trajectory.cpp
p009_opencv_basics/: CMakeLists.txt  README.md
p009_opencv_basics/include/: commons.hpp
p009_opencv_basics/src/: basics.cpp  main.cpp
p010_undistortion/: CMakeLists.txt  README.md
p010_undistortion/include/: undistortion.hpp
p010_undistortion/src/: main.cpp  undistortion.cpp
p011_stereo_disparity_map/: CMakeLists.txt  README.md  setup.sh
p011_stereo_disparity_map/include/: commons.hpp  stereo.hpp  viewer.hpp
p011_stereo_disparity_map/src/: main.cpp  stereo.cpp  viewer.cpp
